7-Zip-JBinding ChangeLog
========================

Release - 4.65-1.02rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)
	* NSIS format support + tests

	* New method ISevenZipInArchive.getArchiveFormat() returns format of the opened archive, 
	  even if archive format auto-detection was used.

	* Binary version for Windows 64 XP and above.


Release - 4.65-1.01rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)

	* API change was necessary to fix a bug:
		- net.sf.sevenzipjbinding.IArchiveExtractCallback.prepareOperation(ExtractAskMode) is void now.
		
		- net.sf.sevenzipjbinding.IArchiveExtractCallback.getStream(int, ExtractAskMode) accepts null return values now.
		  null return values can be used to skip on the fly extraction/testing of archive items. 

	* net.sf.sevenzipjbinding.ISevenZipInArchive.extract(int[], boolean, IArchiveExtractCallback):
		- the first parameter "int[]" is optional now. If null value passed all archive items will be extracted.
		  It if possible to exclude particular items later on using IArchiveExtractCallback call back. Returning null
		  out of net.sf.sevenzipjbinding.IArchiveExtractCallback.getStream method will skip extraction/testing. 

	* CAB format support + tests

	* LZH format support + tests

	* CHM format support + tests

	* Dashboard project added: http://my.cdash.org/index.php?project=7-Zip-JBinding

	* Bugfix: crash, if access archive object out of a call back method


Release - 4.65-1.0rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)

	* 7-Zip-JBinding is cross-platform now !

	* 7-Zip-JBinding binds 7-zip for windows and p7zip for non-windows systems

	* Supported archive methods: 7z, Arj, BZip2, Cpio, GZip, HFS, ISO, Lzma, Rar, Split, Tar, Z, Zip
	  
	* Support for volumed 7z and rar archives
