@@ -4,7 +4,7 @@
 Main features of 4.65-1.01rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)
 
 	* Extraction of
-		- 7z, Zip, Tar, Split, Rar, Lzma, Iso, HFS, GZip, Cpio, BZIP2, Z, Arj, Lzh, Cab, Chm
+		- 7z, Zip, Tar, Split, Rar, Lzma, Iso, HFS, GZip, Cpio, BZIP2, Z, Arj, Lzh, Cab, Chm, Nsis
 	
 	* Support for password protected and volumed archives
 	
@@ -13,12 +13,12 @@ Main features of 4.65-1.01rc-extr-only (Release candidate, extraction only, cros
 	* Simple extraction interface
 	
 	* Cross-platform. Binaries available for
-		- Windows 32
+		- Windows 32/64
 		- Linux 32/64
 		- Mac OS X
 
-	* Over 3000 JUnit tests extraction of archive formats:
-		- 7z, Arj, BZip2, Cpio, GZip, ISO, Lzma, Rar, Tar, Z, Zip, Lzh, Cab, Chm
+	* Over 3100 JUnit tests extraction of archive formats:
+		- 7z, Arj, BZip2, Cpio, GZip, ISO, Lzma, Rar, Tar, Z, Zip, Lzh, Cab, Chm, Nsis
 	
 	* 7-Zip-JBinding requires Java 1.5 or higher
 	
